--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,17 @@ Pillow>=9.5.0
 ultralytics>=8.0.0  # YOLOv8
 
 # 数据处理
-numpy>=1.24.0
+numpy>=1.24.0,<2.0
 pandas>=2.0.0
 scipy>=1.10.0
 scikit-learn>=1.3.0
 
 # Web框架
 fastapi>=0.100.0
-uvicorn>=0.22.0
+uvicorn[standard]>=0.22.0
 websockets>=11.0.0
+python-multipart>=0.0.6
 jinja2>=3.1.0
-Flask>=2.3.0
-Flask-CORS>=4.0.0
 
 # 数据库
 sqlalchemy>=2.0.0
