实现洗手行为检测功能
- 新增姿态检测器模块(pose_detector.py)，支持MediaPipe和备用检测方案
- 新增运动分析器模块(motion_analyzer.py)，实现手部运动轨迹分析
- 新增数据收集器模块(data_collector.py)，自动收集训练数据
- 改进行为识别器(behavior.py)，集成高级检测功能
- 更新区域配置(regions.json)，添加洗手和消毒区域
- 添加mediapipe依赖支持
- 创建完整的测试脚本和功能文档
- 实现两阶段渐进式开发策略的第一阶段

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ numpy>=1.24.0,<2.0
 # 计算机视觉
 opencv-python>=4.8.0
 pandas>=2.0.0
-# mediapipe>=0.10.0  # 暂时注释，依赖冲突
+mediapipe>=0.10.0
 Pillow>=9.5.0
 psycopg2-binary>=2.9.0
 
