feat: 添加模型文件到版本控制
- 修改 .gitignore 允许提交 models/ 目录和 .pt 文件
- 添加 models/ 目录结构和相关 .gitkeep 文件
- 添加 YOLO 模型文件 (yolov8n.pt, yolov8s.pt, yolov8m.pt, yolov8l.pt)
- 添加 hairnet 检测模型文件 (hairnet_detection.pt)
- 删除 src/api/ 目录下重复的模型文件

--- a/.gitignore
+++ b/.gitignore
@@ -169,8 +169,8 @@ logs/
 data/
 !data/.gitkeep
 
-# 模型文件
-models/
+# 模型文件 - 允许提交模型目录结构和配置文件
+# models/ - 已移除，允许提交模型目录
 !models/.gitkeep
 
 # 临时文件
@@ -213,7 +213,7 @@ Thumbs.db
 !tests/fixtures/images/
 
 # 模型权重文件
-*.pt
+# *.pt  # 允许提交.pt模型文件到版本控制
 *.pth
 *.onnx
 *.trt
